# price_checker

./: pyproject.toml
price_checker/data_collector/: __init__.py  scrapper.py  ya_scrapper.py
