[tool.poetry]
name = "price_checker"
version = "0.1.0"
description = ""
authors = ["bluzer2001 <bluzer@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
setuptools = "^69.0.3"
requests = "^2.31.0"
selenium = "^4.16.0"
bs4 = "^0.0.2"
pandas = "^2.1.4"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
